# internal/api/openapi.go
@@ -146,7 +146,7 @@ func needsOrganization(path string) bool {
 
 func publicOperations() []openAPIOperation {
 	return []openAPIOperation{
-		{"GET", "/v1/organizations/{orgID}/workers", "listWorkers", "Workers", false, nil, []nanoflare.App{}, 200}, {"POST", "/v1/organizations/{orgID}/workers", "createWorker", "Workers", false, nanoflare.CreateAppInput{}, nanoflare.App{}, 201}, {"PATCH", "/v1/organizations/{orgID}/workers/{workerID}", "updateWorker", "Workers", false, nanoflare.UpdateAppInput{}, nanoflare.App{}, 200}, {"DELETE", "/v1/organizations/{orgID}/workers/{workerID}", "deleteWorker", "Workers", false, nil, nil, 204}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}", "getWorker", "Workers", false, nil, nanoflare.WorkerDetail{}, 200},
+		{"GET", "/v1/organizations/{orgID}/workers", "listWorkers", "Workers", false, nil, []nanoflare.App{}, 200}, {"POST", "/v1/organizations/{orgID}/workers", "createWorker", "Workers", false, nanoflare.CreateAppInput{}, nanoflare.App{}, 201}, {"GET", "/v1/organizations/{orgID}/workers/analytics", "getOrganizationWorkerMetrics", "Workers", false, nil, nanoflare.WorkerMetricsTimeseries{}, 200}, {"PATCH", "/v1/organizations/{orgID}/workers/{workerID}", "updateWorker", "Workers", false, nanoflare.UpdateAppInput{}, nanoflare.App{}, 200}, {"DELETE", "/v1/organizations/{orgID}/workers/{workerID}", "deleteWorker", "Workers", false, nil, nil, 204}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}", "getWorker", "Workers", false, nil, nanoflare.WorkerDetail{}, 200},
 		{"GET", "/v1/organizations/{orgID}/workers/{workerID}/files", "listWorkerFiles", "Workers", false, nil, []nanoflare.WorkerFile{}, 200}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}/output", "getWorkerOutput", "Workers", false, nil, []nanoflare.WorkerOutputLine{}, 200}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}/analytics", "getWorkerMetrics", "Workers", false, nil, nanoflare.WorkerMetricsTimeseries{}, 200}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}/deployments", "listWorkerDeployments", "Workers", false, nil, []nanoflare.ConsoleDeployment{}, 200}, {"PUT", "/v1/organizations/{orgID}/workers/{workerID}/deployment-traffic", "setWorkerDeploymentTraffic", "Workers", false, deploymentTrafficRequest{}, []nanoflare.ConsoleDeployment{}, 200}, {"POST", "/v1/organizations/{orgID}/workers/{workerID}/deployments", "createWorkerDeployment", "Workers", false, nanoflare.DeployInput{}, nanoflare.WorkerDeployment{}, 201}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}/secrets", "listWorkerSecrets", "Workers", false, nil, []nanoflare.Secret{}, 200}, {"PUT", "/v1/organizations/{orgID}/workers/{workerID}/secrets/{name}", "putWorkerSecret", "Workers", false, nanoflare.PutSecretInput{}, nanoflare.Secret{}, 200}, {"DELETE", "/v1/organizations/{orgID}/workers/{workerID}/secrets/{name}", "deleteWorkerSecret", "Workers", false, nil, nil, 204},
 		{"GET", "/v1/organizations/{orgID}/kv-namespaces", "listKVNamespaces", "KV", false, nil, []nanoflare.KVNamespace{}, 200}, {"POST", "/v1/organizations/{orgID}/kv-namespaces", "createKVNamespace", "KV", false, nanoflare.CreateKVNamespaceInput{}, nanoflare.KVNamespace{}, 201}, {"GET", "/v1/organizations/{orgID}/kv-namespaces/{namespaceID}", "getKVNamespace", "KV", false, nil, nanoflare.KVNamespace{}, 200}, {"PATCH", "/v1/organizations/{orgID}/kv-namespaces/{namespaceID}", "updateKVNamespace", "KV", false, nanoflare.UpdateKVNamespaceInput{}, nanoflare.KVNamespace{}, 200}, {"DELETE", "/v1/organizations/{orgID}/kv-namespaces/{namespaceID}", "deleteKVNamespace", "KV", false, nil, nil, 204}, {"GET", "/v1/organizations/{orgID}/kv-namespaces/{namespaceID}/analytics", "getKVNamespaceMetrics", "KV", false, nil, nanoflare.KVNamespaceMetricsTimeseries{}, 200},
 		{"GET", "/v1/organizations/{orgID}/workers/{workerID}/kv-namespaces/{namespaceID}/values", "listWorkerKV", "KV", false, nil, []nanoflare.WorkerKVKey{}, 200}, {"GET", "/v1/organizations/{orgID}/workers/{workerID}/kv-namespaces/{namespaceID}/values/{key...}", "getWorkerKV", "KV", false, nil, binaryBody{}, 200}, {"PUT", "/v1/organizations/{orgID}/workers/{workerID}/kv-namespaces/{namespaceID}/values/{key...}", "putWorkerKV", "KV", false, binaryBody{}, nil, 204}, {"DELETE", "/v1/organizations/{orgID}/workers/{workerID}/kv-namespaces/{namespaceID}/values/{key...}", "deleteWorkerKV", "KV", false, nil, nil, 204},
